# iceberg_test

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: pytest_guide.md
examples/: schema_evolution.py  simple_table.py
src/iceberg_test/: __init__.py  __main__.py  exceptions.py
src/iceberg_test/cli/: __init__.py  app.py  commands.py
src/iceberg_test/config/: __init__.py  settings.py
src/iceberg_test/core/: __init__.py  catalog.py  table.py  transacion.py  transaction.py
src/iceberg_test/models/: __init__.py  config.py  schema.py
src/iceberg_test/utils/: __init__.py  data.py  schema.py  validators.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py
tests/unit/core/: __init__.py  test_catalog.py  test_table.py  test_transaction.py
tests/unit/models/: __init__.py  test_config.py
tests/unit/utils/: __init__.py  test_data.py  test_schema.py  test_validators.py
